2001-08-09  Radek Doulik  <rodo@ximian.com>

	* htmlcursor.c (backward_in_flow): fixed. before, we could end
	between two text objects in the middle of the line

2001-08-10  Larry Ewing  <lewing@ximian.com>

	* gtkhtml.c (realize): if no one has put us in a scrolled window
	or set our adjustments go ahead and create the adjustments
	ourself.  This will prevent the widget from sefaulting in this
	case.

2001-08-09  Larry Ewing  <lewing@ximian.com>

	* htmlclueflow.c (save_plain): never let the requested length be
	less than zero.

2001-08-09  Joe Shaw  <joe@ximian.com>

	* gtkhtml.c (button_press_event): Don't grab the focus unless
	button 1 is pressed or, in editable mode, button 2 or 3 are
	pressed. This has the effect, in evolution, of allowing the folder
	tree or the message list to keep its focus if you use the mouse
	wheel in the message viewing pane.

2001-08-09  Radek Doulik  <rodo@ximian.com>

	* gtkhtml-enums.h: added grab-focus command

2001-08-08  Radek Doulik  <rodo@ximian.com>

	* htmlengine-edit-selection-updater.c (updater_idle_callback):
	restore selection_mode flag

	* htmlselection.c (html_engine_disable_selection): disable
	selection mode

2001-08-07  Radek Doulik  <rodo@ximian.com>

	* testgtkhtml.c (redirectFilter): do not use g_free on memory
	allocated by HTAnchor_address

	* gtkhtml.c (button_press_event): disable selection mode
	(command): added GTK_HTML_COMMAND_COPY_AND_DISABLE_SELECTION
	command

	* gtkhtml-properties.c (gtk_html_class_properties_new): make ms
	bindings default

	* htmlcluev.c (check_point): fix for padding != 0

2001-08-06  Larry Ewing  <lewing@ximian.com>

	* htmlclue.c (op_helper): don't segfault in the assertion if the
	clue is empty.

2001-08-03  Radek Doulik  <rodo@ximian.com>

	* htmlengine.h: added block_selection flag

	* htmlselection.c (html_engine_activate_selection): test for
	block_selection
	(html_engine_block_selection): new helper function
	(html_engine_unblock_selection): ditto
