@@ -765,6 +765,7 @@ html_image_set_url (HTMLImage *image, const gchar *url)
 	if (url && strcmp (image->image_ptr->url, url)) {
 		HTMLImageFactory *imf = image->image_ptr->factory;
 
+		html_object_change_set (HTML_OBJECT (image), HTML_CHANGE_ALL_CALC);
 		html_image_factory_unregister (imf, image->image_ptr, HTML_IMAGE (image));
 		image->image_ptr = html_image_factory_register (imf, image, url);
 	}
