@@ -1,3 +1,12 @@
+2001-08-13  Radek Doulik  <rodo@ximian.com>
+
+	* htmlengine-edit-table.c: be more careful about HTMLObject types
+
+	* htmlimage.c (html_image_set_url): set object change flags on url
+	change
+
+	* htmlclueflow.c (merge): copy all fields
+
 2001-08-09  Radek Doulik  <rodo@ximian.com>
 
 	* htmlcursor.c (backward_in_flow): fixed. before, we could end
